First page(order window)

--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -65,7 +65,7 @@
                             <div th:each="offer : ${activeOffers}" class="radioB">
                                 <input type="radio" id="radio1" name="offerID"
                                        th:value="${offer.getId()}"/>
-                                <label for="radio1" th:text="${offer.getRestaurant()}" class="order"></label>
+                                <label for="radio1" th:text="${offer.getRestaurant()}" class="order"> Rest 1</label>
                             </div>
                             <br/>
                             <input type="text" th:field="*{yourOrder}" placeholder="Your order" name="order"/>
