--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -20,6 +20,11 @@
                     <h1 th:text="${active.restaurant}"></h1>
                     <p th:text="${active.description}"></p>
                     <p><a th:href="${active.URL}">MENU</a></p>
+                    <h2>Offer expires at:</h2>
+                    <h2 th:text="${active.expirationTime}"><b></b></h2>
+                    <p>Time remaining: </p>
+                    <h2 th:text="${active.getDuration()}"><b></b></h2> <!-- CZAS TRWANIA OFERTY W MILISEKUNDACH. DO ZAMIANY NA ZEGAR -->
+                    <p id="clock"><b></b></p> <!-- TU POWINIEN BY ZEGAR. TESTOWY SKRYPT W STOPCE NA SAMYM DOLE -->
                 </div>
                 <button onclick="document.getElementById('id01').style.display='block'" id="orderBtn">Order</button>
                 <div id="admin"><a href="/adminPa"><img th:src="@{/img/admin.png}" alt="Admin" title="Admin Page"/></a>
@@ -42,7 +47,7 @@
                                     <td th:text="${val.yourOrder}"></td>
                                     <td th:text="${val.price}"></td>
                                     <td th:text="${key}"></td>
-                                    <td class="deleteB">
+                                    <td class="buttonD">
                                         <div th:if="${userHeader == val.user}">
                                             <form th:action="@{/selfDeleteUserResponse/{id}(id=${val.id})}"
                                                   th:object="${activeResponses}" method="post">
@@ -90,4 +95,41 @@
     </div>
 </div>
 </body>
+<footer>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        window.onloadstart = function () {
+
+
+            // Set the date we're counting down to
+            var countDownDate = new Date("Sep 5, 2018 15:37:25").getTime();
+
+            // Update the count down every 1 second
+            var x = setInterval(function () {
+
+                // Get todays date and time
+                var now = new Date().getTime();
+
+                // Find the distance between now an the count down date
+                var distance = countDownDate - now;
+
+                // Time calculations for hours, minutes and seconds
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                // Output the result in an element with id="demo"
+                document.getElementById("clock").innerHTML = hours + "h "
+                    + minutes + "m " + seconds + "s ";
+
+                // If the count down is over, write some text
+                if (distance &lt; 0) {
+                    clearInterval(x);
+                    document.getElementById("clock").innerHTML = "EXPIRED";
+                }
+            }, 1000);
+        }
+        /*]]>*/
+    </script>
+</footer>
 </html>
