--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -36,7 +36,7 @@
                                         <input type="text" th:field="*{URL}" placeholder="url" name="url" required="required"/>
                                         <br/>
                                         <br/>
-                                        <label><b>Offer expires at: </b></label>
+                                        <label class="offerTIme"><b>Offer expires at:</b></label>
                                         <br/>
                                         <input type="time" th:field="*{expirationTime}" name="time" required="required" title="time"/>
 
