--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -22,9 +22,32 @@
                     <p><a th:href="${active.URL}">MENU</a></p>
                     <h2>Offer expires at:</h2>
                     <h2 th:text="${active.expirationTime}"><b></b></h2>
-                    <p>Time remaining: </p>
-                    <h2 th:text="${active.getDuration()}"><b></b></h2> <!-- CZAS TRWANIA OFERTY W MILISEKUNDACH. DO ZAMIANY NA ZEGAR -->
-                    <p id="clock"><b></b></p> <!-- TU POWINIEN BY ZEGAR. TESTOWY SKRYPT W STOPCE NA SAMYM DOLE -->
+                    <p>Time remaining:</p>
+                    <p th:id="${active.restaurant}"></p>
+                    <script th:inline="javascript">
+                       //<![CDATA[
+
+                        var countDownDate = new Date(/*[[${active.duration}]]*/ 'default').getTime();
+
+                        var x = setInterval(function() {
+
+                            var now = new Date().getTime();
+
+                            var distance = countDownDate - now;
+
+                            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+                            document.getElementById(/*[[${active.restaurant}]]*/'default').innerHTML = hours + "h "
+                                + minutes + "m " + seconds + "s ";
+
+                            if (distance < 0) {
+                                clearInterval(x);
+                                document.getElementById(/*[[${active.restaurant}]]*/'default').innerHTML = "EXPIRED";
+                            }
+                        }, 1000);
+                        //]]>
+                    </script>
                 </div>
                 <button onclick="document.getElementById('id01').style.display='block'" id="orderBtn">Order</button>
                 <div id="admin"><a href="/adminPa"><img th:src="@{/img/admin.png}" alt="Admin" title="Admin Page"/></a>
@@ -95,41 +118,41 @@
     </div>
 </div>
 </body>
-<footer>
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        window.onloadstart = function () {
+<!--<footer>-->
+    <!--<script th:inline="javascript">-->
+        <!--/*<![CDATA[*/-->
+        <!--window.onloadstart = function () {-->
 
 
-            // Set the date we're counting down to
-            var countDownDate = new Date("Sep 5, 2018 15:37:25").getTime();
+            <!--// Set the date we're counting down to-->
+            <!--var countDownDate = new Date("Sep 5, 2018 15:37:25").getTime();-->
 
-            // Update the count down every 1 second
-            var x = setInterval(function () {
+            <!--// Update the count down every 1 second-->
+            <!--var x = setInterval(function () {-->
 
-                // Get todays date and time
-                var now = new Date().getTime();
+                <!--// Get todays date and time-->
+                <!--var now = new Date().getTime();-->
 
-                // Find the distance between now an the count down date
-                var distance = countDownDate - now;
+                <!--// Find the distance between now an the count down date-->
+                <!--var distance = countDownDate - now;-->
 
-                // Time calculations for hours, minutes and seconds
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+                <!--// Time calculations for hours, minutes and seconds-->
+                <!--var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));-->
+                <!--var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));-->
+                <!--var seconds = Math.floor((distance % (1000 * 60)) / 1000);-->
 
-                // Output the result in an element with id="demo"
-                document.getElementById("clock").innerHTML = hours + "h "
-                    + minutes + "m " + seconds + "s ";
+                <!--// Output the result in an element with id="demo"-->
+                <!--document.getElementById("clock").innerHTML = hours + "h "-->
+                    <!--+ minutes + "m " + seconds + "s ";-->
 
-                // If the count down is over, write some text
-                if (distance &lt; 0) {
-                    clearInterval(x);
-                    document.getElementById("clock").innerHTML = "EXPIRED";
-                }
-            }, 1000);
-        }
-        /*]]>*/
-    </script>
-</footer>
+                <!--// If the count down is over, write some text-->
+                <!--if (distance &lt; 0) {-->
+                    <!--clearInterval(x);-->
+                    <!--document.getElementById("clock").innerHTML = "EXPIRED";-->
+                <!--}-->
+            <!--}, 1000);-->
+        <!--}-->
+        <!--/*]]>*/-->
+    <!--</script>-->
+<!--</footer>-->
 </html>
