--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -35,10 +35,6 @@
                                         <br/>
                                         <input type="text" th:field="*{URL}" placeholder="url" name="url" required="required"/>
                                         <br/>
-                                        <br/>
-                                        <label class="offerTIme"><b>Offer expires at:</b></label>
-                                        <br/>
-                                        <input type="time" th:field="*{expirationTime}" name="time" required="required" title="time"/>
 
                                         <div class="button">
                                             <button type="submit" class="addNew" id="button2">Add</button>
@@ -93,7 +89,7 @@
                                     </tr>
                                     <tr th:each="user : ${users}">
                                         <div th:if="${user.debt} > 0">
-                                        <td class="b" th:text="${user.firstName}+' '+${user.lastName}">Admin nowak
+                                        <td class="b" th:text="${user.firstName}+' '+${user.lastName}">
                                         </td>
                                         <td class="b" th:text="${user.debt}">q
                                         </td>
@@ -133,6 +129,27 @@
                 </div>
                 <div id="logoCont"><img th:src="@{/img/logoCF.png}" id="logo"/></div>
                 <div id="backButt"><a href="/welcome"><img th:src="@{/img/back.png}"/></a></div>
+
+                <div id="middleMenu">
+                    <form autocomplete="off" action="#" th:action="@{/adminPa}" th:object="${offer}" method="post"
+                          class="timeForm">
+
+                        <label>Set offer expiration</label>
+                        <br/>
+                        <input id="clock" type="time" th:field="*{expirationTime}" name="time" required="required"
+                               title="time"/>
+                        <button type="submit"><img th:src="@{/img/ok.png}"></button>
+
+                    </form>
+                    <div id="sendMail">
+                        <form>
+                            <button type="submit"><img th:src="@{/img/mail.png}"
+                                                       title="Send mail with orders"></button>
+                        </form>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
