--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -15,13 +15,15 @@
             <div id="loginHeader">
                 <p id="header" th:text="${userHeader.firstName}+' '+${userHeader.lastName}"></p>
             </div>
-            <div id="loginHeader2" th:each="active:${activeOffers}">
-                <p class="header2" th:text="${'Offer expires at: ' +active.expirationTime}" ></p>
-                <p class="header2" th:id="${'Time remaining: '+active.restaurant}"></p>
+            <div th:if="${activeOffers.isEmpty() == false}"></div>
+            <div th:unless="${activeOffers.isEmpty() == true}">
+            <div id="loginHeader2">
+                <p class="header2" th:text="${'Offers expires at: ' +activeOffers.get(0).expirationTime}" ></p>
+                <p class="header2" th:id="${activeOffers.get(0).restaurant}"></p>
                 <script th:inline="javascript">
                     //<![CDATA[
 
-                    var countDownDate = new Date(/*[[${active.duration}]]*/ 'default').getTime();
+                    var countDownDate = new Date(/*[[${activeOffers.get(0).duration}]]*/ 'default').getTime();
 
                     var x = setInterval(function () {
 
@@ -32,16 +34,17 @@
                         var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                         var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
                         var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-                        document.getElementById(/*[[${active.restaurant}]]*/'default').innerHTML = hours + "h "
+                        document.getElementById(/*[[${activeOffers.get(0).restaurant}]]*/'default').innerHTML = hours + "h "
                             + minutes + "m " + seconds + "s ";
 
                         if (distance < 0) {
                             clearInterval(x);
-                            document.getElementById(/*[[${active.restaurant}]]*/'default').innerHTML = "EXPIRED";
+                            document.getElementById(/*[[${activeOffers.get(0).restaurant}]]*/'default').innerHTML = "EXPIRED";
                         }
                     }, 1000);
                     //]]>
                 </script>
+            </div>
             </div>
             <div class="container">
                 <div class="restaurantWindow" th:each="active:${activeOffers}">
