--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -75,7 +75,7 @@
             </tr>
             </div>
                 <tr th:each="offer : ${descriptions}">
-                    <h4>OFFER: <p  th:text="${offer.key.restaurant}"></p></h4>
+                    <h4>OFFER: <p  th:text="${offer.key}"></p></h4>
                 </tr>
                 <tr>
                     <th>USER</th>
