--- a/src/main/resources/static/css/Admin.css
+++ b/src/main/resources/static/css/Admin.css
@@ -259,11 +259,18 @@ button {
 
 #clock {
     margin-left: 30px;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 #sendMail {
-    margin-top: 304px;
-    margin-left: 693px;
+    margin-top: 30px;
     position: relative
+}
+
+#emailBox{
+    width: 250px;
+}
+
+#mailBoxWidthRegulation{
+    width: 260px;
 }
