--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -45,9 +45,9 @@
                             </ul>
                             </div>
                             <div th:if="${activeOffers.size() == 2}">
-                                <ul class="second_floor animate">
+                                <ul class="second_floor_info animate">
                                     <li>
-                                        <h2>ONLY 2 OFFERS CAN BE ACTIVE AT A TIME!</h2>
+                                        <h2>ONLY 2 OFFERS CAN BE ACTIVE AT THE SAME TIME</h2>
                                     </li>
                                 </ul>
                             </div>
