--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta name="viewport" content="width=device-width"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -99,7 +99,6 @@
             text-align: center;
         }
 
-
         h1,
         h2,
         h3,
@@ -108,8 +107,7 @@
             font-family: "Eras Medium ITC", serif;
             font-weight: 600;
             line-height: 1.4;
-            margin: 0;
-            Margin-bottom: 30px;
+            margin: 0 0 30px;
         }
 
         h1 {
@@ -125,8 +123,7 @@
             font-family: sans-serif;
             font-size: 14px;
             font-weight: normal;
-            margin: 0;
-            Margin-bottom: 15px;
+            margin: 0 0 15px;
         }
 
         p li,
@@ -215,7 +212,6 @@
             }
 
             table[class=body] .wrapper,
-
             table[class=body] .content {
                 padding: 0 !important;
             }
@@ -256,6 +252,7 @@
             padding-left: 2px;
 
         }
+
         .abc {
             padding-left: 2px;
             border-right: 2px solid #897e1a;
@@ -278,39 +275,39 @@
 <body>
 <table border="0" cellpadding="0" cellspacing="0" class="body">
     <tr>
-
         <td class="container">
             <div class="content">
                 <table class="main">
                     <tr>
                         <td class="wrapper">
                             <table class="mainTable" border="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                <tr th:each="offer : ${descriptions}">
-                                    <h3 th:text="${'OFFER: '+offer.key}"></h3>
-                                </tr>
-                                <tr>
-                                    <th>USER</th>
-                                    <th>ORDER</th>
-                                    <th>PRICE</th>
-                                </tr>
-                                <div th:each="description : ${descriptions.values()}">
-                                    <div th:each="response : ${description}">
-                                        <tr>
-                                            <td class="abc" style="border-left:2px solid #bfaf24; "
-                                                th:text="${response.user.firstName+' '+response.user.lastName}">
-                                            </td>
-                                            <td class="abc" th:text="${response.yourOrder}">
-                                            </td>
-                                            <td class="abc" th:text="${response.price}"></td>
-                                        </tr>
+                                <div th:each="offer:${descriptions}">
+                                    <tr>
+                                    <tr>
+                                        <h3 th:text="${'OFFER: '+offer.key}"></h3>
+                                    </tr>
+                                    <tr>
+                                        <th>USER</th>
+                                        <th>ORDER</th>
+                                        <th>PRICE</th>
+                                    </tr>
+                                    <div th:each="description:${descriptions.values()}">
+                                        <div th:each="response:${description}">
+                                            <tr>
+                                                <td class="abc" style="border-left:2px solid #bfaf24; "
+                                                    th:text="${response.user.firstName+' '+response.user.lastName}"></td>
+                                                <td class="abc" th:text="${response.yourOrder+' || '+ response.restaurant}">
+                                                </td>
+                                                <td class="abc" th:text="${response.price}"></td>
+                                            </tr>
+                                        </div>
                                     </div>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td id="sum"><br>TOTAL PRICE: <p th:text="${price+' zł'}"></td>
+                                    </tr>
                                 </div>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td id="sum"><br>TOTAL PRICE: <p th:text="${price+' zł'}"></td>
-                                </tr>
                                 </tr>
                                 <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                                     <tbody>
@@ -337,7 +334,8 @@
                         <tr>
                             <td class="content-block">
                                 <span>Software Development Academy, Java8Wro</span>
-                                <br>Checkout our project on <a href="https://github.com/kolor997/CorpFood" style="color: #999999">GitHub</a>.
+                                <br>Checkout our project on <a href="https://github.com/kolor997/CorpFood"
+                                                               style="color: #999999">GitHub</a>.
                             </td>
                         </tr>
                         <tr>
